Revamp insulation system to add adaptive insulation